--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,13 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: "NunitoBlack";
+    src: url("./nunito-black.ttf") format("truetype");
+    font-weight: normal;
+    font-style: normal;
+}
+
 
 
 ::-webkit-scrollbar {
@@ -18,6 +25,13 @@
 
 ::-webkit-scrollbar-thumb {
     background: transparent;
+}
+
+
+
+b {
+    font-family: "NunitoBlack", sans-serif;
+    font-weight: 900;
 }
 
 
