--- a/src/style.css
+++ b/src/style.css
@@ -73,6 +73,29 @@ b {
 
 
 
+@keyframes popup {
+    0% {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+.popup-letter {
+    display: none;
+    transform: translateY(20px);
+}
+
+.popup-letter.show {
+    display: inline-block;
+    animation: popup 0.6s ease forwards;
+}
+
+
 
 /*.gradient-cursor {
     width: 5000px;
