--- a/src/style.css
+++ b/src/style.css
@@ -166,6 +166,42 @@ b {
     }
 }
 
+/* ============================== Error Popup Animation ============================== */
+.error-popup {
+    opacity: 0;
+    transform: translateY(20px);
+    animation: popupAnimation 0.5s ease-out forwards;
+}
+
+.error-popup.hide {
+    opacity: 1;
+    transform: translateY(20px);
+    animation: popdownAnimation 0.5s ease-in forwards;
+}
+
+@keyframes popupAnimation {
+    0% {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@keyframes popdownAnimation {
+    0% {
+        opacity: 1;
+        transform: translateY(0px);
+    }
+    100% {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+}
+
+
 /* ============================== Unused Code ============================== */
 /* .gradient-cursor {
     width: 5000px;
