--- a/src/style.css
+++ b/src/style.css
@@ -91,7 +91,7 @@ b {
 @keyframes popup {
     0% {
         opacity: 0;
-        transform: translateY(20px);
+        transform: translateY(-20px);
     }
 
     100% {
@@ -100,14 +100,14 @@ b {
     }
 }
 
-.popup-letter {
+.popupLetter {
     display: none;
     transform: translateY(20px);
 }
 
-.popup-letter.show {
+.popupLetter.show {
     display: inline-block;
-    animation: popup 0.6s ease forwards;
+    animation: popup .5s ease forwards;
 }
 
 /* ============================== Portfolio Images ============================== */
